@@ -1,6 +1,11 @@
 2003-08-08  Sven Herzberg  <herzi@gnome-de.org>
 
 	* data/qalculate.glade,
+	* src/interface.cc: glade-ified the preferences dialog
+
+2003-08-08  Sven Herzberg  <herzi@gnome-de.org>
+
+	* data/qalculate.glade,
 	* src/interface.cc: glade-ified the units dialog
 	* po/de.po: updated translation
 
